# desktop-copilot

./: CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: start-ollama.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  clipboard.rs  config.rs  files.rs  lib.rs  main.rs  ollama.rs  overlay.rs  secrets.rs  shortcuts.rs
src/app/: App.css  App.tsx
src/components/layout/: panel.tsx
src/components/prompt-kit/: prompt-input.tsx
src/components/ui/: badge.tsx  chain-of-thought.tsx  dialog.tsx  disclosure.tsx  input.tsx  keybind-input.tsx  loader.tsx  status-chip.tsx  text-shimmer.tsx  textarea.tsx  tooltip.tsx
src/overlay/: Overlay.tsx  constants.ts
src/overlay/commands/: handleChatCommand.ts  index.ts  parseCommand.ts  registry.ts  types.ts
src/overlay/components/: CaptureConsentModal.tsx  ChatControls.tsx  ChatInput.tsx  MessageBubble.tsx  MessageList.tsx  OllamaRequiredModal.tsx  OverlayCaptureNotice.tsx  OverlayHeader.tsx
src/overlay/hooks/: useAgentsSdkChat.ts  useInputHistory.ts  useOllamaChat.ts  useOllamaHealth.ts  useOverlayHotkeys.ts
src/overlay/ollama/: agent.ts  client.ts
src/overlay/tools/: captureScreenImage.ts  captureScreenText.ts  clipboardContext.ts  listProjectFiles.ts  (+6 more)
src/preferences/: Preferences.tsx
src/shared/: config.ts  keybindings.ts  platform.ts
src/types/: openai-modules.d.ts
websites/docs/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+29 files in other folders)
