[package]
name = "ai-copilot"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.0.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_WinRT",
  "Win32_UI_WindowsAndMessaging",
  "Foundation",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams"
] }
